; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_at32ap700x.c_cpu_clk_get_rate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_at32ap700x.c_cpu_clk_get_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@CKSEL = common dso_local global i32 0, align 4
@CPUDIV = common dso_local global i32 0, align 4
@CPUSEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @cpu_clk_get_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cpu_clk_get_rate(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  store i64 0, i64* %4, align 8
  %5 = load i32, i32* @CKSEL, align 4
  %6 = call i64 @pm_readl(i32 %5)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i32, i32* @CPUDIV, align 4
  %9 = call i64 @PM_BIT(i32 %8)
  %10 = and i64 %7, %9
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load i32, i32* @CPUSEL, align 4
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @PM_BFEXT(i32 %13, i64 %14)
  %16 = add nsw i32 %15, 1
  %17 = sext i32 %16 to i64
  store i64 %17, i64* %4, align 8
  br label %18

18:                                               ; preds = %12, %1
  %19 = load %struct.clk*, %struct.clk** %2, align 8
  %20 = load i64, i64* %4, align 8
  %21 = call i64 @bus_clk_get_rate(%struct.clk* %19, i64 %20)
  ret i64 %21
}

declare dso_local i64 @pm_readl(i32) #1

declare dso_local i64 @PM_BIT(i32) #1

declare dso_local i32 @PM_BFEXT(i32, i64) #1

declare dso_local i64 @bus_clk_get_rate(%struct.clk*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
